--- a/templates/menu/sideNavBar.html.twig
+++ b/templates/menu/sideNavBar.html.twig
@@ -14,7 +14,7 @@
                     <img src="{{ asset('./images/profiles/profile_image_stock01.png') }}" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
-                    <a href="" class="d-block">Nom Empleat</a>
+                    <a href="{{ path('profile') }}" class="d-block"> {{ employee.name }} {{ employee.surnames}} </a>
                 </div>
             </div>
             <!-- Sidebar Menu -->
@@ -22,67 +22,62 @@
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
-                    <li class="nav-item has-treeview menu-open">
-                        <a href="" class="nav-link active">
+                    <li class="nav-item">
+                        <a href="{{ path("dashboard") }}" class="nav-link active">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
-                            <p>
-                                Panell de Control
-                                <i class="right fas fa-angle-left"></i>
-                            </p>
+                            <p>Panell de Control</p>
                         </a>
-                        <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="" class="nav-link active">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p> Vista 1 </p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p> Vista 2 </p>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p> Vista 3 </p>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a href="" class="nav-link">
+                        <a href="{{ path("dashboard") }}" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
-                            <p>
-                                Operatives
-                                <span class="right badge badge-danger">Nou</span>
-                            </p>
+                            <p>Operatives</p>
                         </a>
                     </li>
 
                     <li class="nav-header">CALENDARIS</li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">
+                        <a href="{{ path("dashboard") }}" class="nav-link">
                             <i class="nav-icon fas fa-calendar"></i>
                             <p>Calendari d'Operatives</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">
+                        <a href="{{ path("dashboard") }}" class="nav-link">
                             <i class="nav-icon fas fa-calendar"></i>
                             <p>Calendari Disponibiltat</p>
                         </a>
                     </li>
 
+                    <li class="nav-header">MISSATGES</li>
+                    <li class="nav-item">
+                        <a href="{{ path("mail") }}" class="nav-link">
+                            <i class="nav-icon fas fa-envelope-open"></i>
+                            <p>Missatges</p>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="{{ path("notifications") }}" class="nav-link">
+                            <i class="nav-icon fas fa-envelope"></i>
+                            <p>Notificacions</p>
+                        </a>
+                    </li>
+
                     <li class="nav-header">INFORMES</li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">
+                        <a href="{{ path("dashboard") }}" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
-                            <p>
-                                Informe personal
-                            </p>
+                            <p>Informe personal</p>
+                        </a>
+                    </li>
+
+                    <li class="nav-header">CONFIGURACIÓ</li>
+                    <li class="nav-item">
+                        <a href="{{ path("settings") }}" class="nav-link">
+                            <i class="nav-icon fas fa-cogs"></i>
+                            <p>Configuració</p>
                         </a>
                     </li>
                 </ul>
