--- a/templates/menu/topNavBar.html.twig
+++ b/templates/menu/topNavBar.html.twig
@@ -7,15 +7,14 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="index3.html" class="nav-link">Inici</a>
+                <a href="{{ path('dashboard') }}" class="nav-link">Inici</a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Missatges</a>
+                <a href="{{ path('notifications') }}" class="nav-link">Missatges</a>
             </li>
         </ul>
 
-        <!-- SEARCH FORM -->
-
+        {# SEARCH FORM #}
         {#<form class="form-inline ml-3">
             <div class="input-group input-group-sm">
                 <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
@@ -33,7 +32,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#">
                     <i class="far fa-comments"></i>
-                    <span class="badge badge-danger navbar-badge">3</span>
+                    <span class="badge badge-danger navbar-badge">1</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                     <div class="dropdown-divider"></div>
@@ -53,14 +52,14 @@
                         <!-- Message End -->
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
+                    <a href="{{ path('mail') }}" class="dropdown-item dropdown-footer">Veure tots els missatges</a>
                 </div>
             </li>
             <!-- Notifications Dropdown Menu -->
             <li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
+                <a class="nav-link" data-toggle="dropdown">
                     <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">2</span>
+                    <span class="badge badge-warning navbar-badge">9</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                     <span class="dropdown-item dropdown-header">Notificacions</span>
@@ -77,13 +76,28 @@
                         <i class="fas fa-file mr-2"></i> 1 nou informe
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="" class="dropdown-item dropdown-footer">Veure totes les notificacions</a>
+                    <a href="{{ path('notifications') }}" class="dropdown-item dropdown-footer">Veure totes les notificacions</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="" role="button">
+            <li class="nav-item dropdown">
+                <a class="nav-link" data-toggle="dropdown">
                     <i class="fas fa-user-cog"></i>
                 </a>
+                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                    <span class="dropdown-item dropdown-header">Menu</span>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('profile') }}" class="dropdown-item">
+                        <i class="fas fa-user-alt mr-2"></i> Perfil
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('settings') }}" class="dropdown-item">
+                        <i class="fas fa-cog mr-2"></i> Configuració
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('logout') }}" class="dropdown-item">
+                        <i class="fas fa-file fa-sign-out-alt mr-2"></i> Tancar la sessió
+                    </a>
+                </div>
             </li>
         </ul>
     </nav>
