Afegides plantilles buides, enllaços entre pagines fets, enllaç landing page-panell de control fet

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -9,12 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1> SI ESTAS VEIENT AQUEST MISSATGE HI HA HAGUT UN ERROR AL CONTROLADOR {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/user/projectefinal/src/Controller/DashboardController.php'|file_link(0) }}">src/Controller/DashboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/user/projectefinal/templates/dashboard/index.html.twig'|file_link(0) }}">templates/dashboard/index.html.twig</a></code></li>
-    </ul>
 </div>
 {% endblock %}
