Canviat nom de propietats del Empleat

--- a/templates/dashboard/profile.html.twig
+++ b/templates/dashboard/profile.html.twig
@@ -133,11 +133,11 @@
                             <hr>
                             <strong><i class="fas fa-users"></i> Social Networks</strong>
                             <div>
-                                <a href="#" class="icon-block">
+                                <a href="{{ employee.snsLinkedin }}" class="icon-block">
                                     <i class="fab fa-linkedin fa-3x"></i>
                                 </a>
 
-                                <a href="#" class="icon-block">
+                                <a href="{{ employee.snsTwitter }}" class="icon-block">
                                     <i class="fab fa-twitter fa-3x"></i>
                                 </a>
                             </div>
